[bdist_wheel]
universal=1

[metadata]
name = ipycytoscape
description= A Cytoscape widget for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Mariana Meireles
author_email = mariana.meireles@quantstack.net
url = https://github.com/cytoscape/ipycytoscape
license = BSD
platforms= Linux, Mac OS X, Windows
keywords = Jupyter, Widgets, IPython
include_package_data = True
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter


[options]
packages = find:
install_requires =
    ipywidgets>=7.6.0
    spectate>=1.0.0

[options.extras_require]
test =
    pytest>4.6
    pytest-cov
    nbval
    pandas
    nbclassic>=0.2.8
    networkx
examples =
    pandas
    py2neo
    monotonic
# Any requirements for the examples to run
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autobuild>=2020.9.1
    jupyter-sphinx>=0.3.1
    sphinx-copybutton
    nbsphinx
    nbsphinx-link
    networkx
    pandas
neo4j =
    py2neo
    monotonic

[flake8]
exclude = docs/*, _version.py, .eggs, example/*
max-line-length = 88
docstring-convention = "numpy"
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203, E302, E303
per-file-ignores =
    ipycytoscape/__init__.py:F401
    ipycytoscape/nbextension/__init__.py:F401
